--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <h2>Hello!</h2>
 <h3>This is a placeholder page for now; stay tuned for a new project!</h3>
+  <img src= "https://media.tenor.com/images/dd492862f2a07898534dcd2bdd2807e9/tenor.gif" height="100px" width=“200px”/>
 </body>
 </html>
