--- a/speedtest.html
+++ b/speedtest.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Cache-Control" content="no-store" />
 <link rel="stylesheet" href="main.css" />
 <link rel="stylesheet" href="speedtest.css" />
 <script src="speedtest.js"></script>
