--- a/speedtest.html
+++ b/speedtest.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Cache-Control" content="no-store" />
-<link rel="stylesheet" href="main.css<?php echo date('l jS \of F Y h:i:s A'); ?>" />
-<link rel="stylesheet" href="speedtest.css<?php echo date('l jS \of F Y h:i:s A'); ?>" />
-<script src="speedtest.js<?php echo date('l jS \of F Y h:i:s A'); ?>"></script>
+<link rel="stylesheet" href="main.css" />
+<link rel="stylesheet" href="speedtest.css" />
+<script src="speedtest.js"></script>
 </head>
 <body>
 <h1>Speedtest</h1>
