--- a/speedtest.html
+++ b/speedtest.html
@@ -7,6 +7,86 @@
 <script src="speedtest.js"></script>
 </head>
 <body>
-<h1>Speedtest</h1>
+<div id="pageContent">
+	<h1 class="page-title">Speedtest</h1>
+	<p class="body-text" id="instructionText">This is a two minute (120 second) typing test. The timer will begin when you start to type. To the best of your ability, attempt to type as you would normally. This test is designed to correct your typing, and thus is most effective when able to correct the way you actually type.</p>
+	<div id="textDisplay">
+	</div>
+	<div id="keyboardLayout">
+		<div class="key first word" id="graveAccent">`</div>
+		<div class="key first" id="one">1</div>
+		<div class="key first" id="two">2</div>
+		<div class="key first" id="three">3</div>
+		<div class="key first" id="four">4</div>
+		<div class="key first" id="five">5</div>
+		<div class="key first" id="six">6</div>
+		<div class="key first" id="seven">7</div>
+		<div class="key first" id="eight">8</div>
+		<div class="key first" id="nine">9</div>
+		<div class="key first" id="zero">0</div>
+		<div class="key first" id="hyphen">-</div>
+		<div class="key first" id="equalsSign">=</div>
+		<div class="key first word" id="backspace">&#8592;</div>
+		
+		<div class="break"></div>
+		
+		<div class="key second word" id="tab">Tab</div>
+		<div class="key second" id="q">Q</div>
+		<div class="key second" id="w">W</div>
+		<div class="key second" id="e">E</div>
+		<div class="key second" id="r">R</div>
+		<div class="key second" id="t">T</div>
+		<div class="key second" id="y">Y</div>
+		<div class="key second" id="u">U</div>
+		<div class="key second" id="i">I</div>
+		<div class="key second" id="o">O</div>
+		<div class="key second" id="p">P</div>
+		<div class="key second" id="openCurlyBracket">{</div>
+		<div class="key second" id="closeCurlyBracket">}</div>
+		<div class="key second" id="backslash">\</div>
+
+		<div class="break"></div>
+		
+		<div class="key third word" id="capsLock">Caps</div>
+		<div class="key third" id="a">A</div>
+		<div class="key third" id="s">S</div>
+		<div class="key third" id="d">D</div>
+		<div class="key third" id="f">F</div>
+		<div class="key third" id="g">G</div>
+		<div class="key third" id="h">H</div>
+		<div class="key third" id="j">J</div>
+		<div class="key third" id="k">K</div>
+		<div class="key third" id="l">L</div>
+		<div class="key third" id=";">;</div>
+		<div class="key third" id="'">'</div>
+		<div class="key third word" id="enter">Enter</div>
+
+		<div class="break"></div>
+
+		<div class="key fourth word" id="leftShift">Shift</div>
+		<div class="key fourth" id="z">Z</div>
+		<div class="key fourth" id="x">X</div>
+		<div class="key fourth" id="c">C</div>
+		<div class="key fourth" id="v">V</div>
+		<div class="key fourth" id="b">B</div>
+		<div class="key fourth" id="n">N</div>
+		<div class="key fourth" id="m">M</div>
+		<div class="key fourth" id="comma">,</div>
+		<div class="key fourth" id="period">.</div>
+		<div class="key fourth" id="forwardSlash">/</div>
+		<div class="key fourth word" id="rightShift">Shift</div>
+
+		<div class="break"></div>
+
+		<div class="key fifth word" id="leftControl">Ctrl</div>
+		<div class="key fifth word" id="leftWindowsKey">Win</div>
+		<div class="key fifth word" id="leftAlt">Alt</div>
+		<div class="key fifth word" id="space">Space</div>
+		<div class="key fifth word" id="rightAlt">Alt</div>
+		<div class="key fifth word" id="rightWindowsKey">Win</div>
+		<div class="key fifth word" id="menu">Menu</div>
+		<div class="key fifth word" id="rightControl">Ctrl</div>
+	</div>
+</div> 
 </body>
 </html>
