--- a/speedtest.html
+++ b/speedtest.html
@@ -4,26 +4,26 @@
 <meta http-equiv="Cache-Control" content="no-store" />
 <link rel="stylesheet" href="main.css" />
 <link rel="stylesheet" href="speedtest.css" />
-<script src="speedtest.js"></script>
 </head>
 <body>
 <div id="pageContent">
 	<h1 class="page-title">Speedtest</h1>
 	<p class="body-text" id="instructionText">This is a two minute (120 second) typing test. The timer will begin when you start to type. To the best of your ability, attempt to type as you would normally. This test is designed to correct your typing, and thus is most effective when able to correct the way you actually type.</p>
 	<div id="textDisplay">
+		<textarea id="textInput" placeholder="Start typing here!" onpaste="return false"></textarea>
 	</div>
 	<div id="keyboardLayout">
 		<div class="key first word" id="graveAccent">`</div>
-		<div class="key first" id="one">1</div>
-		<div class="key first" id="two">2</div>
-		<div class="key first" id="three">3</div>
-		<div class="key first" id="four">4</div>
-		<div class="key first" id="five">5</div>
-		<div class="key first" id="six">6</div>
-		<div class="key first" id="seven">7</div>
-		<div class="key first" id="eight">8</div>
-		<div class="key first" id="nine">9</div>
-		<div class="key first" id="zero">0</div>
+		<div class="key first" id="1">1</div>
+		<div class="key first" id="2">2</div>
+		<div class="key first" id="3">3</div>
+		<div class="key first" id="4">4</div>
+		<div class="key first" id="5">5</div>
+		<div class="key first" id="6">6</div>
+		<div class="key first" id="7">7</div>
+		<div class="key first" id="8">8</div>
+		<div class="key first" id="9">9</div>
+		<div class="key first" id="0">0</div>
 		<div class="key first" id="hyphen">-</div>
 		<div class="key first" id="equalsSign">=</div>
 		<div class="key first word" id="backspace">&#8592;</div>
@@ -41,13 +41,13 @@
 		<div class="key second" id="i">I</div>
 		<div class="key second" id="o">O</div>
 		<div class="key second" id="p">P</div>
-		<div class="key second" id="openCurlyBracket">{</div>
-		<div class="key second" id="closeCurlyBracket">}</div>
+		<div class="key second" id="openBracket">[</div>
+		<div class="key second" id="closeBracket">]</div>
 		<div class="key second" id="backslash">\</div>
 
 		<div class="break"></div>
 		
-		<div class="key third word" id="capsLock">Caps</div>
+		<div class="key third word" id="capslock">Caps</div>
 		<div class="key third" id="a">A</div>
 		<div class="key third" id="s">S</div>
 		<div class="key third" id="d">D</div>
@@ -87,6 +87,10 @@
 		<div class="key fifth word" id="menu">Menu</div>
 		<div class="key fifth word" id="rightControl">Ctrl</div>
 	</div>
+	<div id="timer">
+		<h2 id="timerText">Time: <span id="timerReadout">120.0</span> seconds</h2>
+	</div>
 </div> 
 </body>
+<script src="speedtest.js"></script>
 </html>
