--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Speed and Dexterity | Visual Typing Analysis</title>
+<link rel="stylesheet" href="main.css" />
 </head>
 <body>
-	<h2>Hello!</h2>
-	<h3>This is a placeholder page for now; stay tuned for a new project!</h3>
-	<img src= "https://media.tenor.com/images/dd492862f2a07898534dcd2bdd2807e9/tenor.gif" height="100px" width=“200px”/>
+	<h2 class="page-title">Hello!</h2>
+	<h3 class="sub-tite">This is a placeholder page for now; stay tuned for a new project!</h3>
 	<a href="speedtest.html">WIP Speedtest</a>
 </body>
 </html>
